@@ -13,6 +13,7 @@
   * Remove Callback class - unnecessary
   * Make build_static_method_call() a global function
   * Object#__call now calls Object#call instead of Object#send so it can splat the arguments
+  * Object#super now calls Object#call instead of Object#send so it can splat the arguments
 
 2009-03-11 - Sean Huber (shuber@huberry.com)
   * Rename to phby
